# Gitingest-MCP

./: .gitignore  fastmcp.json  pyproject.toml
.github/workflows/: test.yml
docs/: HOWTO.md
scripts/: inspector_ci.py
src/gitingest_mcp/: ingest.py  server.py
tests/: test_ingest.py
