[project]
name = "gitingest-mcp"
version = "0.1.0"
description = "Gitingest MCP server that provides Github repository info including file content, directory structure and other metadata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitingest>=0.1.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitingest_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "respx>=0.22.0",
    "time-machine>=3.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
gitingest-mcp = "gitingest_mcp.server:main"
